# observatory-platform

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.airflow-webserver  Dockerfile.observatory  LICENSE  LICENSES_THIRD_PARTY  MANIFEST.in  README.md  config_observatory.sh  configure_observatory_platform  constraints-py3.8-airflow-2.1.2.txt  docker-compose.airflow-main.yml  docker-compose.airflow-postgres.yml  docker-compose.airflow-secrets.yml  docker-compose.airflow-webserver.yml  docker-compose.airflow-worker.yml  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.observatory.yml  docker-compose.secrets.yml  entrypoint-airflow.sh  entrypoint-root.sh  entrypoint.sh  index.rst  install.sh  install_observatory_platform  install_observatory_platform_terraform_deps  installer_functions.sh  observatory_platform_installer_fn  pyproject.toml  requirements.txt  setup.cfg  setup.py  (+1 more)
observatory-api/: .openapi-generator-ignore  Dockerfile  README.md  api-config.yaml  requirements.cloudrun.txt  requirements.sh  requirements.txt  setup.cfg  setup.py
observatory-api/.openapi-generator/: FILES
observatory-api/api/: elastic.py  openapi.yml
observatory-api/observatory/api/: api.py  app.py  cli.py  docker.py  elastic.py  openapi.yaml.jinja2  openapi_renderer.py  orm.py  table_type_info.py  testing.py  utils.py
observatory-api/observatory/api/cli/: cli.py  openapi_renderer.py
observatory-api/observatory/api/client/: .gitignore  __init__.py  api_client.py  configuration.py  exceptions.py  identifiers.py  model_utils.py  rest.py
observatory-api/observatory/api/server/: api.py  app.py  dataset_type.py  elastic.py  openapi.yaml.jinja2  openapi_renderer.py  orm.py
observatory-api/observatory/api/terraform/: main.tf  outputs.tf  variables.tf
observatory-api/observatory/api/tests/cli/: test_cli.py  (+1 more)
observatory-api/observatory/api/utils/: auth_utils.py  elasticsearch_utils.py  exception_utils.py  test_elastic.py
observatory-api/server/: openapi.yaml.jinja2
observatory-api/templates/: README_common.mustache  README_onlypackage.mustache  api_doc.mustache  configuration.mustache  model_doc.mustache
observatory-api/templates/model_templates/: classvars.mustache
observatory-api/terraform/: main.tf  variables.tf
observatory-platform/: .env  README.md  requirements.sh  requirements.txt  setup.cfg  setup.py
observatory-platform/observatory/platform/: airflow.py  api.py  bigquery.py  config-terraform-api.yaml.jinja2  config-terraform.yaml.jinja2  config.py  config.yaml.jinja2  dag_tag.py  files.py  gcp.py  gcs.py  gke.py  observatory_config.py  observatory_environment.py  packer_builder.py  platform_builder.py  sftp.py  tasks.py  terraform_api.py  terraform_builder.py  test_utils.py  transform.py
observatory-platform/observatory/platform/airflow/: credentials_provider.py  data_interval.py  secret_manager.py  secret_manager_client.py
observatory-platform/observatory/platform/api/: Dockerfile  api.py  app.py  openapi-v1.yml  orm.py
observatory-platform/observatory/platform/cli/: build_command.py  cli.py  cli_utils.py  click.py  click_utils.py  database_command.py  generate_command.py  platform_command.py  seed_db.py  terraform_command.py
observatory-platform/observatory/platform/dags/: dummy_telescope.py  load_dags.py  load_dags_legacy.py  load_dags_modules.py  load_workflows.py  vm_create.py  vm_destroy.py
observatory-platform/observatory/platform/docker/: Dockerfile.apiserver.jinja2  Dockerfile.observatory.jinja2  Dockerfile.package_install.jinja2  Dockerfile.seed_db.jinja2  builder.py  compose.py  compose_runner.py  docker-compose.observatory.yml.jinja2  elasticsearch.yml  entrypoint-airflow.sh.jinja2  entrypoint-api.sh  entrypoint-api.sh.jinja2  entrypoint-root.sh  platform_builder.py  platform_runner.py  seed_db.sh.jinja2
observatory-platform/observatory/platform/elastic/: docker-compose.yml  docker-compose.yml.jinja2  elastic.py  elastic_environment.py  elasticsearch.yml  kibana.py
observatory-platform/observatory/platform/elasticsearch/: Dockerfile  DockerfileWaypoint  api.py  openapi2.yml  openapicloud2.yml  query.py  requirements.txt  server.py  waypoint.hcl
observatory-platform/observatory/platform/refactor/: sensors.py  tasks.py  workflow.py
observatory-platform/observatory/platform/sql/: delete_records.sql.jinja2  select_columns.sql.jinja2  select_table_shard_dates.sql.jinja2  upsert_records.sql.jinja2
observatory-platform/observatory/platform/tasks/: terraform.py
observatory-platform/observatory/platform/telescopes/: organisation_telescope.py  snapshot_telescope.py  stream_telescope.py  telescope.py  workflow_telescope.py
observatory-platform/observatory/platform/templates/: doc.md.jinja2  snapshottelescope.py.jinja2
observatory-platform/observatory/platform/terraform/: build.sh  main.tf  observatory-image.json  observatory-image.json.pkr.hcl  openapi_endpoint.yml  outputs.tf  startup.tpl.jinja2  terraform_api.py  terraform_builder.py  variables.tf  versions.tf
observatory-platform/observatory/platform/tests/: test_generate_csv.py  test_terraform_api.py
observatory-platform/observatory/platform/utils/: airflow_utils.py  api.py  clearbit_utils.py  config_utils.py  dag_run_sensor.py  data_utils.py  default_config.jinja2  file_utils.py  gc_utils.py  html_utils.py  http_download.py  jinja2_utils.py  json_util.py  proc_utils.py  progbar_utils.py  release_utils.py  telescope_utils.py  template_utils.py  test_utils.py  url_utils.py  workflow_utils.py
observatory-platform/observatory/platform/vm/: vm_image_builder.py
observatory-platform/observatory/platform/workflows/: elastic_import_workflow.py  organisation_telescope.py  snapshot_telescope.py  stream_telescope.py  stream_workflow.py  terraform.py  vm_workflow.py  workflow.py
observatory-reports/: README.md  requirements.txt  setup.cfg  setup.py
observatory-reports/observatory/reports/: abstract_table.py  chart_utils.py  defaults.py  es_tables.py  report_utils.py  tables.py
(+1633 files in other folders)
