[metadata]
name = academic-observatory-workflows
author = Curtin University
author-email = agent@observatory.academy
summary = Academic Observatory Workflows provides Apache Airflow Workflows for fetching, processing and analysing data about academic institutions.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/The-Academic-Observatory/academic-observatory-workflows
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/academic-observatory-workflows/issues
    Documentation = https://academic-observatory-workflows.readthedocs.io/en/latest/
    Source Code = https://github.com/The-Academic-Observatory/academic-observatory-workflows
python-requires = >=3.7
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    academic-observatory-workflows

[files]
packages =
    academic_observatory_workflows
data_files =
    academic_observatory_workflows/database = academic_observatory_workflows/database/*

[extras]
tests =
    liccheck==0.4.*
    flake8==3.8.*
    coverage==5.2

[pbr]
skip_authors = true
