[metadata]
name = observatory-platform
author = Curtin University
author_email = agent@observatory.academy
summary = The Observatory Platform is an environment for fetching, processing and analysing data to understand how well universities operate as Open Knowledge Institutions.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/The-Academic-Observatory/observatory-platform
project_urls =
    Bug Tracker =
    Documentation =
    Source Code =
python_requires = >=3.10
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    observatory-platform

[files]
packages =
    observatory
    observatory.platform
data_files =
    requirements.txt = requirements.txt
    requirements.sh = requirements.sh
    observatory/platform/docker = observatory/platform/docker/*
    observatory/platform/terraform = observatory/platform/terraform/*
    observatory/platform =
        observatory/platform/config.yaml.jinja2
        observatory/platform/config-terraform.yaml.jinja2

[entry_points]
console_scripts =
    observatory = observatory_platform.cli.cli:cli

[extras]
tests =








[pbr]
skip_authors = true
