[metadata]
name = observatory-api
author = Curtin University
author_email = agent@observatory.academy
summary =
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/The-Academic-Observatory/observatory-platform
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/observatory-platform/issues
    Documentation = https://observatory-platform.readthedocs.io/en/latest/
    Source Code = https://github.com/The-Academic-Observatory/observatory-platform
python_requires = >=3.10
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    observatory-api

[files]
packages =
    observatory
    observatory.api
data_files =
    requirements.txt = requirements.txt
    requirements.sh = requirements.sh
    observatory/api =
        observatory/api/server/openapi.yaml.jinja2

[entry_points]
console_scripts =
    observatory-api = observatory.api.cli:cli

[extras]
tests =
    liccheck>=0.4.9,<1
    flake8>=3.8.0,<4
    coverage>=5.2,<6

[pbr]
skip_authors = true
