[metadata]
name = observatory-platform
author = Curtin University
author_email = agent@observatory.academy
summary = The Observatory Platform is an environment for fetching, processing and analysing data to understand how well universities operate as Open Knowledge Institutions.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/The-Academic-Observatory/observatory-platform
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/observatory-platform/issues
    Documentation = https://observatory-platform.readthedocs.io/en/latest/
    Source Code = https://github.com/The-Academic-Observatory/observatory-platform
python_requires = >=3.7
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    observatory-platform

[files]
packages =
    observatory
    observatory.platform
data_files =
    requirements.txt = requirements.txt
    requirements.sh = requirements.sh
    observatory/platform/docker = observatory/platform/docker/*
    observatory/platform/elastic = observatory/platform/elastic/*
    observatory/platform/terraform = observatory/platform/terraform/*
    observatory/platform/utils/templates = observatory/platform/utils/templates/*
    observatory/platform/workflows/templates = observatory/platform/workflows/templates/*
    observatory/platform =
        observatory/platform/config.yaml.jinja2
        observatory/platform/config-terraform.yaml.jinja2

[entry_points]
console_scripts =
    observatory = observatory.platform.cli.cli:cli

[extras]
tests =
    liccheck>=0.4.9,<1
    flake8>=3.8.0,<4
    coverage>=5.2,<6
    faker>=8.12.1,<9
    redis>=3.5.3,<4
    boto3>=1.15.0,<2
    azure-storage-blob>=12.8.1,<13

[pbr]
skip_authors = true
