[metadata]
name = observatory-reports
author = Curtin University
author-email = agent@observatory.academy
summary = Reports for the Observatory Platform
description = Reports for the Observatory Platform
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/The-Academic-Observatory/observatory-platform
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/observatory-platform/issues
    Documentation = https://coki-academic-observatory.readthedocs-hosted.com/en/latest
    Source Code = https://github.com/The-Academic-Observatory/observatory-platform
    Download = https://github.com/The-Academic-Observatory/observatory-platform/v20.7.0.tar.gz
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Browser
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

keywords =
    science
    data
    workflows
    academic institutes
    observatory-platform

[files]
namespace_packages = observatory
packages = observatory

[extras]
tests =
    liccheck==0.4.*
    flake8==3.8.*
    coverage==5.2
    redis==3.5.*

[pbr]
skip_authors = true
