[metadata]
name = observatory-reports
author = Curtin University
author-email = agent@observatory.academy
summary = Observatory Reports provides report building functionality for the Observatory Platform.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/The-Academic-Observatory/observatory-platform
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/observatory-platform/issues
    Documentation = https://observatory-platform.readthedocs.io/en/latest/
    Source Code = https://github.com/The-Academic-Observatory/observatory-platform
python-requires = >=3.7
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    observatory-platform

[files]
packages =
    observatory
    observatory.reports

[extras]
tests =
    liccheck==0.4.*
    flake8==3.8.*
    coverage==5.2

[pbr]
skip_authors = true
